src/objects/CRMfusionDBR101__Setting__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Index__c</fullName>
        <description>This is the setting name with an index number appended to it.  It&apos;s used as an external ID for upserts for arrays that need more than 32000 characters of storage.</description>
        <externalId>true</externalId>
        <label>Index</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Value</fullName>
                </value>
                <value>
                    <fullName>Array</fullName>
                </value>
                <value>
                    <fullName>Array Pair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Value__c</fullName>
        <label>Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DupeBlocker Setting (Deprecated)</label>
    <nameField>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DupeBlocker Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>